--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "paidaccess",
+  "name": "heritage",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-git":"vite build --base=/heritage/",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
