--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
+    "framer-motion": "^11.15.0",
     "jose": "^5.9.6",
     "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
