--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "jose": "^5.9.6",
     "jwt-decode": "^4.0.0",
@@ -25,7 +26,8 @@
     "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
